Fixed center alignment on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,15 @@
+html {
+  width:100%;
+  height:100%;
+}
+
 body {
   background: #EEE;
   padding: 5px;
-  min-height: 100vh;
+  min-height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #login-container {
@@ -9,7 +17,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  height: calc(100vh - 10px);
+  width: 100%;
 }
 
 #login-header {
